# News

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt  things_to_add.txt
backend/: manage.py  whole.json
backend/baseapp/: MaintenanceMiddleware.py  admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
backend/baseapp/migrations/: 0001_initial.py
backend/baseapp/templatetags/: nepali_timesince.py
backend/gorkhapatra/: asgi.py  settings.py  urls.py  wsgi.py
backend/gorkhapatra/settings/: base.py
backend/static/bootstrap/css/: bootstrap.min.css
backend/static/js/: script.js
backend/static/styles/: utility.css
backend/staticfiles/bootstrap/js/: bootstrap.min.js
backend/staticfiles/ckeditor/ckeditor/: ckeditor.js  styles.js
backend/staticfiles/ckeditor/ckeditor/adapters/: jquery.js
backend/staticfiles/ckeditor/ckeditor/lang/: af.6f9ce52799fb.js  ar.079f17fde447.js  az.js  bg.js  bn.c9a81de49677.js  bs.js  ca.js  cs.js  cy.d44dfd05e890.js  da.ce0996cf92c5.js  de-ch.js  de.js  el.800707eb57b0.js  en-au.js  en-ca.3f1d7f8a3751.js  en-gb.js  en.2accdcbd2b85.js  eo.js  es-mx.bb2d46bf5c30.js  es.aeeda5aaac73.js  et.js  eu.1fe4a5442e7f.js  fa.js  fi.4f975c197550.js  fo.js  fr-ca.js  fr.js  (+43 more)
backend/staticfiles/styles/: responsive.css  style.css
backend/templates/: 404.html  503.html  category-home.html  index.html  news_single.html
backend/templates/base/: base.html  footer.html  header.html
scripts/: entrypoint.sh
(+260 files in other folders)
